Fix mobile wrapping

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -164,7 +164,6 @@ blockquote {
   .prado {
     display: block;
     font-size: $font-size-h3;
-    white-space: nowrap;
   }
 }
 
